--- a/css/common.css
+++ b/css/common.css
@@ -1,54 +1,82 @@
 @media (max-width: 800px) {
-    .header-flex-container, .category-list, .product-list {
-        flex-direction: column;
-        align-items: center;
-    }
-    .navigation-links {
-        flex-direction: column;
-    }
-    .product-card {
-        width: 90%;
-        margin: 10px auto;
-    }
-    .category-list {
-        margin-left: 0;
-        margin-right: 0;
-    }
+  .header-flex-container,
+  .category-list,
+  .product-list {
+    flex-direction: column;
+    align-items: center;
+  }
+  .navigation-links {
+    flex-direction: column;
+  }
+  .product-card {
+    width: 90%;
+    margin: 10px auto;
+  }
+  .category-list {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
 }
 header {
-    position: fixed; top: 0; width: 100%; z-index: 1000;
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-    text-align: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
 }
 .header-flex-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 .navigation-links {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 .navigation-links a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px 0;
+}
+.container {
+  margin: auto;
+  margin-top: 80px;
+  padding: 0px 20px;
+  max-width: 1200px;
+}
+
+.btn {
+  border: none;
+  outline: none;
+  background-color: rgb(16, 180, 65);
+  padding: 20px;
+  cursor: pointer;
+  font-weight: 700;
+  border-radius: 20px;
+  color: white;
+  transition: all 500ms;
+  width: 100%;
+}
+.btn:hover{
+  background-color: rgb(6, 135, 45);
+  
 }
