--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,7 @@
     text-overflow: ellipsis;
 }
 .product-price {
-    color: #e31837; 
+    color: #333; 
     font-weight: bold;
     position: absolute; 
     bottom: -10px; 
@@ -76,4 +76,6 @@
     bottom: -10px;
     right: 10px;
 }
-
+.product-card:has(.original-price) .product-price {
+    color: #e31837;
+}
