--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
     display: flex; 
     justify-content: space-around; 
     padding: 20px 0; 
-    margin-top: 80px; 
+    margin-top: 100px; 
     margin-left: 20vw; 
     margin-right: 20vw; 
     text-align: center;
@@ -78,4 +78,17 @@
 }
 .product-card:has(.original-price) .product-price {
     color: #e31837;
+}
+
+#floating-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    background-color: #333;
+    color: white;
+    border-radius: 50px;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
 }
